--- a/lambdaA_cachorro.yml
+++ b/lambdaA_cachorro.yml
@@ -1,3 +1,3 @@
-name: lambdaA_cachorro
-runtime: nodejs20.x
-comments: arquivo de teste 01
+Name: lambdaA_cachorro
+Runtime: nodejs20.x
+Comments: arquivo de teste 01
