--- a/lambdaD_peixe.yml
+++ b/lambdaD_peixe.yml
@@ -1,3 +1,3 @@
-name: lambdaD_peixe
-runtime: nodejs18.x
-comments: arquivo de teste 04
+Name: lambdaD_peixe
+Runtime: nodejs18.x
+Comments: arquivo de teste 04
