--- a/lambdaC_pato.yml
+++ b/lambdaC_pato.yml
@@ -1,3 +1,3 @@
-name: lambdaC_pato
-runtime: nodejs16.x
-comments: arquivo de teste 03
+Name: lambdaC_pato
+Runtime: nodejs16.x
+Comments: arquivo de teste 03
