--- a/lambdaB_gato.yml
+++ b/lambdaB_gato.yml
@@ -1,3 +1,3 @@
-name: lambdaB_gato
-runtime: nodejs18.x
-comments: arquivo de teste 02
+Name: lambdaB_gato
+Runtime: nodejs18.x
+Comments: arquivo de teste 02
